--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include/libnuraft)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/examples)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/examples/calculator)
+include_directories(BEFORE ${PROJECT_SOURCE_DIR}/examples/game)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/examples/echo)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/tests)
